# plug-parsec

./: Cargo.toml  README.md  attitude.rs  data.csv
doc/: help.html  settings.html  src-files.js
doc/docs/: all.html  fn.foo.html  index.html
doc/search.index/: root.js
doc/search.index/crateNames/: 98f74cb89a15.js
doc/search.index/desc/: a55ce49d37da.js
doc/search.index/function/: f02157fae2af.js
doc/search.index/name/: 622c242a6c9f.js
doc/search.index/path/: ec86c6506b1e.js
doc/src/docs/: lib.rs.html
src/: grammar.rs  lib.rs  main.rs  popolars.rs
src/parsec/: grammar.rs  lexer.rs
